--- a/scss/_filter-size.scss
+++ b/scss/_filter-size.scss
@@ -1,5 +1,7 @@
 // main: main.scss
 
+
+
 .filter-size {
 	& h1 {
 		font-family: 'Montserrat',
@@ -243,7 +245,7 @@
 
 
 .for-color__check:checked+.for-color__label::before {
-	border: 3px solid $red-link;
+	border: 3px solid #fc3838;
 }
 
 .for-color__check:checked+.for-color__label::after {
@@ -404,4 +406,63 @@
 	font-weight: 400;
 	font-size: 12px;
 	padding: 10px;
+}
+
+
+
+
+
+// Showcase =================
+
+
+.showcase-sort {
+	padding: 25px 0;
+	font-family: 'Montserrat',
+		sans-serif;
+	font-size: 12px;
+	font-weight: 500;
+	color: $descr;
+}
+
+.showcase-sort__list,
+.showcase-sort {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.showcase-sort__list {
+
+	& a {
+		display: inline-block;
+		text-decoration: none;
+		font-family: 'Montserrat', sans-serif;
+		font-size: 12px;
+		color: $dark-gray;
+		margin-left: 20px;
+	}
+
+	& a:hover {
+		color: $red-link;
+	}
+}
+
+.showcase-sort__select {
+	background-color: $dark-gray;
+	color: $black;
+	border: none;
+	border-radius: 3px;
+	padding: 5px 10px;
+}
+
+
+
+.showcase__row {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 40px;
+
+	& .slider-new__item {
+		margin-left: 15px;
+	}
 }
