--- a/css/main.css
+++ b/css/main.css
@@ -961,6 +961,7 @@ li {
   height: 23px;
   display: block;
   border: 3px solid #b1b1b1;
+  background-color: #ffffff;
   border-radius: 4px;
   position: absolute;
   top: 0;
