--- a/scss/_filter-size.scss
+++ b/scss/_filter-size.scss
@@ -63,6 +63,7 @@
 		height: 23px;
 		display: block;
 		border: 3px solid $bord-check;
+		background-color: #ffffff;
 		border-radius: 4px;
 		position: absolute;
 		top: 0;
