Add page armani

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,6 +2,8 @@
 
 $light-gray: #f6f6f6;
 $dark-gray: #cccaca;
+$del-gray: #bebebe;
+$line-gray: #e1e1e1;
 $gray: #eaeaea;
 $black: #191919;
 $red-link: #d44343;
@@ -20,5 +22,6 @@ $orange: #e58e28;
 $yellow: #e5d01c;
 
 $gray-button: #949494;
+$dark-button: #9b9b9b;
 
 $brand-text: #545352;
