--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -417,6 +417,18 @@ li {
   width: 125px;
 }
 
+.slider-news--card {
+  border-bottom: none;
+}
+
+.slider-news--card .slider-new {
+  padding-bottom: 0;
+}
+
+.slider-news--card h2 {
+  width: 275px;
+}
+
 .slider-new {
   width: 100%;
   padding-bottom: 55px;
@@ -1375,6 +1387,253 @@ li {
   font-size: 13px;
   line-height: 24px;
   color: #545352;
+}
+
+.product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 75px;
+  margin: 50px 0;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.product-slider {
+  width: 540px;
+  height: 575px;
+  background-color: #f8f8f8;
+}
+
+.product-item h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 27px;
+  color: #000000;
+  margin: 0 0 40px;
+}
+
+.product-item__price {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  color: #000000;
+}
+
+.product-item__price del {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: #bebebe;
+}
+
+.product-item__size-tab {
+  cursor: pointer;
+  border-radius: 3px;
+  background-color: #9b9b9b;
+  width: 160px;
+  height: 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 35px 0 35px;
+}
+
+.product-item__size-rang {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.product-item__size-item {
+  width: 60px;
+  height: 40px;
+  border-radius: 3px;
+  background-color: #e1e1e1;
+  color: #191919;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 10px;
+}
+
+.current {
+  background-color: #d44343;
+  color: #fff;
+}
+
+.product-item__size-descr h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #3d3d3d;
+}
+
+.product-item__size-descr p {
+  width: 100%;
+  max-width: 660px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #3d3d3d;
+}
+
+.product-item__size-data {
+  width: 100%;
+  max-width: 660px;
+  height: 90px;
+  background-color: #f8f8f8;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: #191919;
+  margin: 25px 0;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.size-data_left {
+  width: 45%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.size-data_bold {
+  font-weight: 700;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.size-data_thin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 30px;
+}
+
+.size-data_right {
+  width: 55%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.product-item__size-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.size-button_basket {
+  cursor: pointer;
+  width: 260px;
+  height: 60px;
+  border-radius: 3px;
+  background-color: #d44343;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-right: 10px;
+}
+
+.size-button_pay {
+  cursor: pointer;
+  width: 195px;
+  height: 60px;
+  border-radius: 3px;
+  background-color: #191919;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-right: 10px;
+}
+
+.size-button_like {
+  width: 60px;
+  height: 60px;
+  border-radius: 3px;
+  background-color: #191919;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.size-button_like img {
+  width: 40px;
+  height: 40px;
 }
 
 @media (max-width: 1240px) {
