--- a/scss/_slider-new.scss
+++ b/scss/_slider-new.scss
@@ -15,6 +15,18 @@
 	}
 }
 
+.slider-news--card {
+	border-bottom: none;
+
+	& .slider-new {
+		padding-bottom: 0;
+	}
+
+	& h2 {
+		width: 275px;
+	}
+}
+
 .slider-new {
 	width: 100%;
 	padding-bottom: 55px;
