--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -42,9 +42,10 @@
 
 .contacts__form {
 	width: 100%;
+	text-align: center;
 
 	& h2 {
-		width: 240px;
+		min-width: 240px;
 		margin: 30px auto 50px;
 	}
 }
