--- a/scss/_filter-size.scss
+++ b/scss/_filter-size.scss
@@ -13,12 +13,14 @@
 
 .filter-size__wrap {
 	width: 275px;
+	justify-content: space-between;
 }
 
 
 
 .for-brand {
 	position: relative;
+	min-width: 275px;
 	height: 345px;
 	background-color: $brand-bg;
 	padding: 35px 15px 0 25px;
@@ -137,6 +139,7 @@
 
 .for-size__palett {
 	position: relative;
+	width: 275px;
 	height: 140px;
 	background-color: $brand-bg;
 	padding: 30px 27px;
@@ -222,6 +225,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
+	width: 275px;
 	height: 140px;
 	background-color: $brand-bg;
 	padding: 25px;
@@ -400,6 +404,8 @@
 // Button ============
 
 .filter-size__button {
+	min-width: 130px;
+	height: 35px;
 	margin-top: 30px;
 	background-color: $gray-button;
 	color: #ffffff;
