--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -120,6 +120,60 @@
 			margin-bottom: 0;
 		}
 	}
+
+	.product {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.product-slider,
+	.product-item {
+		margin: 0 auto;
+	}
+
+	.product-slider {
+		margin-bottom: 50px;
+	}
+
+	.product-item {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		text-align: center;
+	}
+
+	.product-item__size,
+	.product-item__size-wrap {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.product-item__size-data {
+		display: flex;
+		flex-wrap: wrap;
+		height: auto;
+	}
+
+	.size-data_left,
+	.size-data_right {
+		width: 100%;
+		margin-bottom: 20px;
+
+	}
+
+	.size-data_bold,
+	.size-data_thin {
+		width: 300px;
+		height: 40px;
+	}
+
+	.product-item__size-button {
+		margin: 0 auto;
+	}
+
 }
 
 
@@ -461,6 +515,31 @@
 		margin: 0 0 50px 30%;
 	}
 
+	.product-slider {
+		width: 100%;
+		max-width: 540px;
+
+		position: relative;
+
+		& .slider-nav {
+			display: none;
+		}
+
+		& .slider-for {
+			position: absolute;
+			top: 0;
+		}
+	}
+
+	.product-item__size-rang {
+		flex-wrap: wrap;
+		justify-content: center;
+
+		& .product-item__size-item {
+			margin-bottom: 20px;
+		}
+	}
+
 	.pay__card {
 		height: auto;
 	}
@@ -548,6 +627,19 @@
 		}
 	}
 
+	.product-item__size-data {
+		padding: 10px;
+	}
+
+	.product-item__size-button {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.size-button_basket {
+		margin-bottom: 20px;
+	}
+
 	.footer {
 		justify-content: center;
 	}
@@ -604,6 +696,13 @@
 	.subscribe__form {
 		& input::placeholder {
 			font-size: 12px;
+		}
+	}
+
+	.product-slider {
+
+		& .slider-for {
+			right: -10px;
 		}
 	}
 }
