Fixed2 mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,18 @@ li {
           justify-content: space-between;
 }
 
+.crumb {
+  margin-top: 20px;
+}
+
+.crumb a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  color: #757575;
+  text-decoration: none;
+  margin-right: 5px;
+}
+
 .header__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -561,6 +573,7 @@ li {
 
 .trend__small-card img {
   width: 100%;
+  max-height: 385px;
 }
 
 .trend__small-card p {
@@ -1424,13 +1437,14 @@ li {
 .product-slider .slider-for {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 150px;
+  width: 540px;
 }
 
 .product-slider__arrows {
   position: absolute;
-  top: 0;
-  right: 0;
+  bottom: 10px;
+  left: 330px;
   z-index: 150;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1443,8 +1457,7 @@ li {
           align-items: center;
   width: 40px;
   height: 40px;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 50%;
+  background-color: #fff;
   cursor: pointer;
 }
 
@@ -1454,7 +1467,7 @@ li {
 }
 
 .product-slider__prev {
-  right: 60px;
+  left: 280px;
 }
 
 .product-item h2 {
@@ -1989,7 +2002,8 @@ li {
     margin: 30px;
   }
   .filter-size__wrap {
-    width: 700px;
+    width: 100%;
+    max-width: 700px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2299,6 +2313,10 @@ li {
   .showcase-sort__list nav a {
     margin-top: 20px;
   }
+  .filter-size__wrap {
+    width: 100%;
+    max-width: 600px;
+  }
 }
 
 @media (max-width: 690px) {
@@ -2319,6 +2337,9 @@ li {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
+  .filter-size {
+    display: none;
+  }
 }
 
 @media (max-width: 638px) {
@@ -2326,11 +2347,19 @@ li {
     width: 80%;
     margin: 0 auto;
   }
+  .slider-new .slider-new__arrows,
+  .slider-new .slider-new__prev,
+  .slider-new .slider-new__next {
+    display: none;
+  }
   .header__search-input {
     margin-left: 10px;
   }
   .header__search-input input {
     width: 250px;
+  }
+  .product-slider {
+    display: none;
   }
   .slider-top__item {
     background-color: #b1b1af;
@@ -2405,18 +2434,6 @@ li {
   }
   .slider-news h2 {
     margin: 0 0 50px 30%;
-  }
-  .product-slider {
-    width: 100%;
-    max-width: 540px;
-    position: relative;
-  }
-  .product-slider .slider-nav {
-    display: none;
-  }
-  .product-slider .slider-for {
-    position: absolute;
-    top: 0;
   }
   .product-item__size-rang {
     -ms-flex-wrap: wrap;
