--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -40,3 +40,17 @@ li {
 	display: flex;
 	justify-content: space-between;
 }
+
+.crumb {
+	margin-top: 20px;
+
+	& a {
+		font-family: 'Montserrat', sans-serif;
+		font-size: 12px;
+		color: #757575;
+		text-decoration: none;
+		margin-right: 5px;
+	}
+
+
+}
