--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -1,5 +1,6 @@
 // main: main.scss
 
+
 .product {
 	display: flex;
 	justify-content: space-between;
@@ -22,22 +23,23 @@
 	& .slider-for {
 		position: absolute;
 		top: 0;
-		right: 0;
+		left: 150px;
+		width: 540px;
 	}
 }
 
 .product-slider__arrows {
 	position: absolute;
-	top: 0;
-	right: 0;
+	bottom: 10px;
+	left: 330px;
 	z-index: 150;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 40px;
 	height: 40px;
-	background-color: rgba($color: #fff, $alpha: .8);
-	border-radius: 50%;
+	background-color: #fff;
+	// border-radius: 50%;
 	cursor: pointer;
 
 	& img {
@@ -46,10 +48,10 @@
 	}
 }
 
-.product-slider__prev {
-	right: 60px;
-}
 
+.product-slider__prev {
+	left: 280px;
+}
 
 
 .product-item {
