--- a/scss/_trend.scss
+++ b/scss/_trend.scss
@@ -48,7 +48,6 @@
 .trend__militare {
 	& .trend__small {
 		margin-left: 0;
-
 	}
 }
 
@@ -60,6 +59,7 @@
 
 	& img {
 		width: 100%;
+		max-height: 385px;
 	}
 
 	& p {
